# formura

./: .dockerignore  .travis.yml  CMakeLists-for-k.txt  CMakeLists.txt  Dockerfile  LICENSE  Makefile.am  README.md  cmake-for-k.sh  cmake-for-x86.sh  configure.ac  develop.md  developper-note.md  flymake  forever-make  forever-test  formura.cabal  make-doc.sh  stack.yaml
.qb/: config
attic/: Semantics.hs  forp.hs  graph.hs  lambda-calculus.hs  language-draft.md  n-d-array.hs  name-scope.c  obj.hs  reader-and-state.hs  rule110.cpp  rule30.cpp  test-patternmatch.hs  tupler.hs  type-parse.md
attic/OM/: LICENSE  OM.cabal
attic/combinator-NT/: combinator-NT.cabal  stack.yaml
attic/combinator-NT/src/: Main.hs
attic/f-test/: Makefile  submit.sh
attic/f90-before-coopt/: finalist.f90  finalist_header.f90  finalist_internal_0.f90  finalist_internal_1.f90  finalist_internal_10.f90  finalist_internal_11.f90  finalist_internal_12.f90  finalist_internal_13.f90  finalist_internal_14.f90  finalist_internal_15.f90  finalist_internal_2.f90  finalist_internal_3.f90  finalist_internal_4.f90  finalist_internal_5.f90  finalist_internal_6.f90  finalist_internal_7.f90  finalist_internal_8.f90  finalist_internal_9.f90
attic/flops-test/: schisse.c  test.c  test.s  test.sh
attic/fortran-autoindent/: autoindent.sh  example.f90
attic/fortran-binary-IO/: main.f90  visualize.py
attic/fortran-linker/: compile.sh  library.f90  main.f90  parameter.h
attic/fortran-mpi-test/: Makefile  lib.f90  main.f90
attic/himeno/: himenoBMTxpa.c
attic/knl/: 1d-stencil-barrier.cpp  1d-stencil-comm.cpp  1d-stencil-morecomp.cpp  1d-stencil-realcomm.cpp  1d-stencil.cpp  Makefile  benchmark.txt  dvec.h  knlcomp.cpp  plot-scaling.gnu  survey.py  task-parallel.cpp  tmp-01.cpp  tmp-02.cpp  tmp-03.cpp  tmp-04.cpp  tmp-05.cpp  tmp.cpp
attic/mm256_test/: Makefile  basic-avx.cpp  host.cpp
attic/mpi-test/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure-for-K  configure.ac  forever-make  test-1.cpp
attic/mpi-test/script/: jobscript.sh  login-interactive-node.sh  submit-interactive-job.sh  submit-large-job-example.sh  take-profile.sh
attic/mpi-test/src/: Makefile.am  Makefile.in  ping-pong.cpp  pipe.c  pof-1.c  pof-2.c  pof-2x.c  pof-2y.c  pof-2z.c  static-pingpong.cpp  test-1.cpp
attic/overwrite/: main-minibuf.cpp  main.cpp
attic/pearson-3d-native/: Makefile  a.out  main.c  main.optmsg  main.s  output_prof_X3-short.txt  output_prof_X3.txt
attic/reference/: Makefile  benchmark-2d-fujitsu.cpp  benchmark-2d-fujutsu.cpp  benchmark-2d-main.cpp  benchmark-survey.hs  body-2d-fujitsu.cpp  body-2d-notb.cpp  body-2d-pitch-opt.cpp  body-2d-pitch-simd.cpp  body-2d-pitch.cpp  body-template-OpPi.cpp  forever-make  gen-fin.cpp  gen-init.cpp  gen.cpp  generate-dash-stencil.hs  hpc-ace2-test.cpp  interactive-prof.sh  main-1.cpp  main-1d.cpp  main-2d-opt.cpp  main-2d.cpp  main-dash.cpp  main-td.cpp  main.cpp  make-csv.sh  mxintrin.h  params.h  patch-simd.hs  plot-benchmark-DB.hs  plot-benchmark.gnu  plot-benchmark.hs  proceed-region.cpp  submit.sh
attic/sayaendou/: Makefile  count-ldx.sh  expnote.md  (+9 more)
example/: Makefile.am  comment.f31  diffusion-short.f31  diffusion.f31  generate-00-empty-function.f31  generate-01-diffusion.f31  generate-02-nonav.f31  generate-03-broken.f31  generate-04-type.f31  main-diffusion.cpp  nishizawa-adopted.f31  nishizawa.f31  pearson-main.cpp  pearson.f31  shallowWater.f31  test-02-subsitution.f31  test-03-expression.f31  test-04-scale.f31  test-05-scale-rev2.f31  test-06-dynamic.f31  test-07-diffusion.f31  test-07-run.txt  test-07-scale-freevi.f31  test-08-scale.f31  test-09-scale2.f31  test-10-ana.f31  test-11-token.f31  test-12-eval.f31  test-core+f-01-diffusion.f31  test-core-01-diffusion.f31  test-core-02-duplication.f31  test-core-03-math.f31  test-gen.f31  test.f  test.f31  test.f90  test2-01-multi-decl.f31
example-1.0/: diffusion.f31  rule30.f31  test-gen-grid.f31  test-gen.f31  test.f31
examples/: 2d-mhd-dc.fmr  2d-mhd-main.cpp  2d-mhd.fmr  2d-mhd.nc  2d-mhd.yaml  3d-localsun-main.cpp  3d-localsun.fmr  3d-localsun.yaml  3d-mhd-lessM.fmr  3d-mhd-main-bin.cpp  3d-mhd-main-prof.cpp  3d-mhd-main.cpp  3d-mhd-rk4.fmr  3d-mhd-rk4.yaml  3d-mhd.fmr  3d-mhd.nc  Makefile.am  av-mhd-3d.fmr  av-mhd-main.cpp  av-mhd.fmr  av-mhd.yaml  champion.fmr  champion.yaml  compile-diffusion.sh  diffusion-short.cpp  diffusion.cpp  diffusion.fmr  finalist-main.f90  finalist.fmr  finalist.yaml  good-main.cpp  hydro.fmr  interactive-champion-main.cpp  interactive-finalist-main.f90  interactive-main.f90  lotka-volterra.fmr  main.f90  mhd-av.fmr  mhd.fmr  move.fmr  (+20 more)
examples-generated/: 2d-mhd.c  2d-mhd.h  diffusion.c  diffusion.fmr  diffusion.h  diffusion.nc  pearson-main.cpp  pearson.c  pearson.fmr  pearson.h
exe-src/: CommandLineOption.hs  c-incubator.hs  formura-eval.hs  formura-gen.hs  formura-list-reserved-char.hs  formura.hs  incubator.hs  make-make.hs  region-planner.hs  test-generator.hs  test-parser.hs
reference/: 2016-02-24.md
resource/: main.cpp  template-2d-notb.cpp  utility.cpp
scripts/: Makefile.template  av-plot.py  build-pearon-2d.sh  c-incubate.sh  cleanvalidate-C.sh  cleanvalidate-F.sh  cleanvalidate-K.sh  cleanvalidate-f.sh  cleanvalidate-localsun.sh  cleanvalidate-pearson-3d.sh  cleanvalidate.sh  emacs-batch-f90-indent.el  find-flops.py  hackage-docs.sh  incubate.sh  indent-fortran.sh  install-z3.sh  lotka-volterra-test.py  plot-2d-mhd.py  plot-pearson-K.py  plot-pearson-bin.py  plot-pearson.py  plot.gnu  plot.py  prof-on-greatwave.py  prof-on-k.py  sources-to-pdf.sh  test-on-k-3d.py  test-on-k.py  validate-pearson-3d.sh  visualize-F.sh  visualize-K.sh  wrap-fortran.py
specification/: Makefile  char-tbl.tex  eclbkbox.sty  forever-make  formura-specification.aux  formura-specification.bbl  formura-specification.blg  formura-specification.dvi  formura-specification.out  formura-specification.tex  formura-specification.toc  formura-users-manual.tex  input-diffusion.tex  input-pearson.tex  reference.bib  spec-main.tex
test/: test-geometry.hs  test-region-plan.hs
(+131 files in other folders)
