bin_PROGRAMS = $(top_builddir)/bin/test-1  \
	$(top_builddir)/bin/ping-pong \
	$(top_builddir)/bin/static-pingpong \
	$(top_builddir)/bin/pof-1 \
	$(top_builddir)/bin/pof-2

__top_builddir__bin_test_1_SOURCES=test-1.cpp

__top_builddir__bin_ping_pong_SOURCES=ping-pong.cpp pipe.c

__top_builddir__bin_static_pingpong_SOURCES=static-pingpong.cpp

__top_builddir__bin_pof_1_SOURCES=pof-1.c

__top_builddir__bin_pof_2_SOURCES=pof-2.c
