bin_PROGRAMS = $(top_builddir)/bin/test-1  \
	$(top_builddir)/bin/ping-pong \
	$(top_builddir)/bin/static-pingpong \
	$(top_builddir)/bin/pof-1 \
	$(top_builddir)/bin/pof-2x \
	$(top_builddir)/bin/pof-2y \
	$(top_builddir)/bin/pof-2z

__top_builddir__bin_test_1_SOURCES=test-1.cpp

__top_builddir__bin_ping_pong_SOURCES=ping-pong.cpp pipe.c

__top_builddir__bin_static_pingpong_SOURCES=static-pingpong.cpp

__top_builddir__bin_pof_1_SOURCES=pof-1.c

__top_builddir__bin_pof_2x_SOURCES=pof-2x.c
__top_builddir__bin_pof_2y_SOURCES=pof-2y.c
__top_builddir__bin_pof_2z_SOURCES=pof-2z.c
